--- a/apps/tctf-dashboard/tsconfig.json
+++ b/apps/tctf-dashboard/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "jsxImportSource": "react",
     "strict": true,
     "emitDeclarationOnly": false,
