--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -91,7 +91,7 @@ jobs:
       - name: Install dependencies
         run: pnpm install
       - name: Run security audit
-        run: pnpm audit
+        run: pnpm audit --audit-level=high
 
       #- name: Run Snyk security scan
       #uses: snyk/actions/node@master
